--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>MeetMe - Free Resume Website Template</title>
+    <title>Catherine Essien</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" >
@@ -40,7 +40,7 @@
               <span class="icon-menu"></span>
               <span class="icon-menu"></span>
             </button>
-            <a href="index.html" class="navbar-brand"><img src="assets/img/logo.png" alt=""></a>
+            <a href="index.html" class="navbar-brand"></a>
           </div>
           <div class="collapse navbar-collapse" id="main-navbar">
             <ul class="onepage-nev navbar-nav mr-auto w-100 justify-content-end clearfix">
@@ -139,15 +139,9 @@
             <div class="img-thumb wow fadeInLeft" data-wow-delay="0.3s">
               <h3>Hello!</h3>
               <p>
-                I'm Catherine Essien, a dedicated full-stack developer with a keen interest in
-                cloud engineering. I
-                first became interested in tech when I took part in an ERP integration project and
-                cross-functional end-to-end testing during my previous career in order management. Following the project,
-                I embarked on a journey to learn full-stack development. Subsequently, my exploration extended to
-                cloud technologies, which I pursued through various avenues, including a bootcamp.</br>
-                </br>As part of my professional growth, I have obtained the AWS Certified Developer Associate
-                certification and
-                I'm currently learning towards the AWS Certified Solutions Architect Associate certification.</br>
+                I'm Catherine Essien, a dedicated cloud engineer. My interest in technology sparked when I stumbled upon an online advertisement, and deepened when a friend introduced me to its possibilities, showcasing the impactful work women are doing in the field. Eager to seize the opportunity, I delved into learning AWS cloud computing. My journey expanded to encompass diverse cloud technologies, which I pursued through avenues such as boot camps.
+              </br>
+                </br>As part of my professional development, I have earned certifications as an AWS Certified Developer Associate and an AWS Certified Solutions Architect Associate.</br>
   
                 </br>Please see below some of the things I have built and my resume.
               </p>
@@ -192,6 +186,7 @@
                       Project Slides</a>
                       <a  href="https://youtu.be/UR0fUBHE53U?si=n7r-UmwJAI1CM0-g" class="btn btn-common"> Video link
                       </a>
+                      <a href="https://youtube.com/shorts/QNWyFE4-6DM?si=kUKclGENz1kkRvLx" class="btn btn-common"> Pitch </a>
                     </div>
                   </div>
                 </div>               
