--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                   About
                 </a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="#services">
                   Services
                 </a>
@@ -63,7 +63,7 @@
                 <a class="nav-link" href="#resume">
                   Resume
                 </a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a class="nav-link" href="#portfolios">
                   Work
@@ -292,7 +292,7 @@
                   <a class="instagram" href="https://github.com/catherine-essien"><i class="icon-social-github"></i></a>
                 </li>
               </ul>
-              <p>Copyright © 2018 UIdeck All Right Reserved</p>
+              <p>Copyright © 2024 UIdeck All Right Reserved</p>
             </div>
           </div>
         </div>
